# SeNes2D

./: CMakeLists.txt  main.cpp
Lib/core/Lighting/: CMakeLists.txt
Lib/core/Lighting/include/: Lighting.h
Lib/core/Objects/: CMakeLists.txt
Lib/core/Objects/Shapes/: CMakeLists.txt
Lib/core/Objects/Shapes/includes/: Cube.h
Lib/core/Objects/Shapes/sources/: Cube.cpp
Lib/core/Objects/includes/: Camera.h  SceneObject.h  WorldObject2D.h  WorldObject3D.h
Lib/core/Objects/sources/: Camera.cpp  SceneObject.cpp  WorldObject2D.cpp  WorldObject3D.cpp
Lib/core/Utils/: CMakeLists.txt
Lib/core/Utils/include/: Color.h  CopyableAndMoveable.h  NotCopyableAndNotMoveable.h  NotCopyableButMoveable.h
Lib/core/Utils/source/: Utils.cpp
Lib/core/Wrappers/: CMakeLists.txt
Lib/core/Wrappers/include/: Gl.h  Shader.h  ShaderManager.h  ShaderProgram.h  Texture.h  VAO.h  VBO.h  Window.h
Lib/core/Wrappers/source/: Gl.cpp  Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Window.cpp
Lib/glad/: CMakeLists.txt
Lib/glew/: CMakeLists.txt
Lib/glm/: CMakeLists.txt
Objects/Camera/: CMakeLists.txt
Objects/Camera/include/: Camera.h
Objects/Camera/source/: Camera.cpp
Objects/Shapes/: CMakeLists.txt
Objects/Shapes/3D/Cube/: CMakeLists.txt
Objects/Shapes/3D/Cube/include/: Cube.h
Objects/Shapes/3D/Cube/source/: Cube.cpp
Objects/WorldObject2D/: CMakeLists.txt
Objects/WorldObject2D/include/: WorldObject2D.h
Objects/WorldObject2D/source/: WorldObject2D.cpp
Objects/WorldObject3D/: CMakeLists.txt
Objects/WorldObject3D/include/: WorldObject3D.h
Objects/WorldObject3D/source/: WorldObject3D.cpp
Utils/: CMakeLists.txt
Utils/include/: Utils.h
Wrappers/: CMakeLists.txt
Wrappers/include/: Gl.h  ShaderProgram.h  Texture.h  Window.h
Wrappers/source/: Gl.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Window.cpp
assets/shaders/: main.frag  main.vert
cmake/: Deploy.cmake
